--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@ body {
   border: 0;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .snap {
   width: 10%;
   border-radius: 4px;
@@ -18,4 +24,21 @@ body {
   touch-action: none;
   text-align: center;
   position: absolute;
+}
+
+#add-button {
+  border: 0;
+  background-color: #22ee66;
+  color: #fff;
+  font-size: 1.1em;
+  padding: 1%;
+  border-radius: 4px;
+  margin: 15px 0;
+  cursor: pointer;
+}
+
+#grid {
+  background-color: #c2e1f8;
+  height: 100%;
+  width: 100%;
 }
