--- a/style.css
+++ b/style.css
@@ -22,15 +22,13 @@ body {
 
 .item {
   border: 2px dashed gray;
-  width: 15%;
+  min-width: 15%;
   border-radius: 4px;
   padding: 2%;
   margin: 1rem 0 0 1rem;
   background-color: #29e;
-  color: #fff;
   font-size: 1.2em;
   touch-action: none;
-  text-align: center;
   position: absolute;
   display: flex;
   align-items: center;
@@ -72,16 +70,46 @@ body {
   border-top: 2px dashed gray;
 }
 
+.itemButtons {
+  display: flex;
+  align-items: center;
+}
+
 .removeButton {
   padding: 0;
   border: 0;
   color: #ff0000;
   background-color: transparent;
-  font-size: 2rem;
+  font-size: 3rem;
   cursor: pointer;
   transition: .2s;
 }
 
 .removeButton:hover {
   color: #c00000;
+}
+
+.editButton {
+  padding: 0;
+  border: 0;
+  color: #eeff00;
+  background-color: transparent;
+  font-size: 1.5rem;
+  cursor: pointer;
+  transition: .2s;
+}
+
+.editButton:hover {
+  color: #c0bd00;
+}
+
+.insideText {
+  font-family: monospace;
+  background-color: transparent;
+  border: 0;
+  resize: none;
+  font-size: 2rem;
+  color: #fff;
+  outline: 0;
+  margin-right: 2rem;
 }
